# dali-ui-documentation

./: .gitignore  Agent ~phase 2 stage a.md  Agent.md  Agent_2.md  README.md  callgraph_parser_implementation_plan.md  dali_doc_system_dev_plan.md  dali_doc_system_plan.md  diff_detector_implementation_plan.md  enhance_doxygen_context_implementation_plan.md  enhance_notier_fix_implementation_plan.md  phase_1_5_implementation_plan.md  stage_a_implementation_plan.md  stage_b_implementation_plan.md  stage_d_implementation_plan.md  update-implementation-plan.md
dali-doc-gen/: .env.example  .gitignore  README.md  TODO.md  pyproject.toml  requirements.txt
dali-doc-gen/cache/: last_run_commits.json  llm_session_stats.json
dali-doc-gen/cache/callgraph_json/: dali-adaptor.json  dali-core.json  dali-ui.json
dali-doc-gen/cache/doc_blueprints/: stage_b_blueprints_app.json
dali-doc-gen/cache/feature_map/: class_feature_map.json  feature_map.json  feature_map_classified.json
dali-doc-gen/cache/feature_taxonomy/: feature_taxonomy.json
dali-doc-gen/cache/markdown_drafts/: Index.md
dali-doc-gen/cache/parsed_doxygen/: dali-adaptor.json  dali-core.json  dali-ui.json
dali-doc-gen/cache/validation_report/: stage_c_report_app.json
dali-doc-gen/config/: doc_config.yaml  llm_config.yaml  repo_config.yaml
dali-doc-gen/scripts/: run_extract_all.sh
dali-doc-gen/src/: config.py  logger.py  pipeline.py
dali-doc-gen/src/00_extract/: callgraph_parser.py  diff_detector.py  doxygen_parser.py  doxygen_runner.py  repo_manager.py
dali-doc-gen/src/01_cluster/: feature_clusterer.py  (+1 more)
(+2070 files in other folders)
