[tool.poetry]
name = "dali-doc-gen"
version = "0.1.0"
description = "DALi Documentation Generator using LLM"
authors = ["DALi Team"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = []

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["yaml.*", "git.*"]
ignore_missing_imports = true
